# MIPT-Huawei-student-lab

./: README.md
AntonShurygin/: README.md
AntonShurygin/1-b/: CMakeLists.txt  README.md
AntonShurygin/1-b/naive_algo/: Makefile  Matrix.hpp  main.cpp  my_time.hpp
AntonShurygin/1-b/open_cl_vers/: cl_mul.cc  cl_mul.cl  cl_mul.hh  err_what.cc
AntonShurygin/1-b/optimized_algo/: matr_product.hpp
AntonShurygin/2-a/: CMakeLists.txt  main.cc
AntonShurygin/2-a/Channel/: channel.cc  channel.hh
AntonShurygin/2-a/Cnvltion_algo/Naive_algo/: naive_algo.cc  naive_algo.hh
AntonShurygin/2-a/Matrix/: matrix.cc  matrix.hh
AntonShurygin/2-a/Tensor_4D/: tensor.cc  tensor.hh
AntonShurygin/2-a/test/: simple_test_check.py
IvanSidorenko/: about.txt
